auxiliary files (not that important)

--- a/bootstrap-4.3.1/site/docs/4.3/assets/scss/docs.scss
+++ b/bootstrap-4.3.1/site/docs/4.3/assets/scss/docs.scss
@@ -15,10 +15,10 @@
 //   For example, consistent media queries through those mixins.
 //
 // - Bootstrap's **docs variables** are prefixed with `$bd-`.
-//   These custom colors avoid collision with the components Bootstrap provides.
+//   These custom colors avoid collision with the vue-material-training Bootstrap provides.
 //
 // - Classes are prefixed with `.bd-`.
-//   These classes indicate custom-built or modified components for the design
+//   These classes indicate custom-built or modified vue-material-training for the design
 //   and layout of the Bootstrap docs. They are not included in our builds.
 //
 // Happy Bootstrapping!
@@ -28,7 +28,7 @@
 @import "../../../../../scss/variables";
 @import "../../../../../scss/mixins";
 
-// Load docs components
+// Load docs vue-material-training
 @import "variables";
 @import "nav";
 @import "masthead";
