--- a/bootstrap-4.3.1/scss/_print.scss
+++ b/bootstrap-4.3.1/scss/_print.scss
@@ -96,7 +96,7 @@
       min-width: $print-body-min-width !important;
     }
 
-    // Bootstrap components
+    // Bootstrap vue-material-training
     .navbar {
       display: none;
     }
